En API, se crea el controller de Tasks, la cadena de conexión y se registran los servicios en Program.cs

--- a/src/TaskManagementApi.API/appsettings.json
+++ b/src/TaskManagementApi.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=../TaskManagementApi.Infrastructure/Data/tasks.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
